# ComfyScript

./: Cargo.toml  README.md  errors.txt  minified.test.cfs  syntax.txt  test.cfs  test.ez  test.txt  x.cfs
src/: comfy.rs  command.rs  errors.rs  exec.rs  execute_folder.rs  interpreter.rs  main.rs  minify.rs  parser.rs  reserved_keywords.rs  script.rs  test_files.rs
src/comfy/: collections.rs  env.rs  fs.rs  http.rs  io.rs  json.rs  math.rs  thread.rs  time.rs
src/interpreter/: declaration.rs  import.rs
src/parser/: assignment.rs  ast.rs  bool.rs  builtins.rs  comment.rs  composite_types.rs  data_type.rs  errors.rs  expression.rs  for.rs  for_loop.rs  function.rs  if_block.rs  import.rs  loop_for.rs  loop_while.rs  match_block.rs  numbers.rs  operations.rs  parenthesized.rs  primitive_values.rs  reserved.rs  reserved_keywords.rs  strings.rs  utils.rs
src/parser/assignment/: initial.rs  reassign.rs
src/parser/ast/: identifier.rs  import.rs  literal_value.rs  object.rs  range.rs  vars.rs
src/parser/composite_types/: array.rs  object.rs
src/parser/expression/: array.rs  bool.rs  function_call.rs  indexing.rs  member_expr.rs  nil.rs  numbers.rs  object.rs  parenthesized.rs  range.rs  strings.rs  template_literal.rs
src/parser/function/: function_call.rs  return_expression.rs
tests/: basic.cfs  comments.cfs  composite.cfs  errors.cfs  expression.cfs  for_loop.cfs  function.cfs  if.cfs  import.cfs  indexing.cfs  match.cfs  member.cfs  minified.objects_expr.cfs  objects_expr.cfs  primitive.cfs  prompt_age.cfs  propagation.cfs  vars.cfs  while_loop.cfs
(+6 files in other folders)
