[package]
name = "comfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.1"
lazy_static = "1.4.0"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.8.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
