[package]
name = "comfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
hashbrown = "0.14.1"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
rand = "0.8.5"
rayon = "1.8.0"

[profile.release]
strip = true
lto = true
# opt-level = "s"
# codegen-units = 1
